<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        tools:context=".SecondActivity">

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/choise"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/digit_ed"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/edit_text"
            android:hint="@string/enter_num"
            android:inputType="number"
            android:paddingHorizontal="8dp"
            android:drawableBottom="@drawable/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/digit_ed">

        <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:text="@string/from"
                android:textColor="@color/white"
                android:textSize="24sp" />

        <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:text="@string/to"
                android:textColor="@color/white"
                android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Spinner
                android:id="@+id/start_spn"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text" />

        <Spinner
                android:id="@+id/end_spn"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text" />
    </LinearLayout>

    <TextView
            android:id="@+id/resultat_tw"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_text"
            android:hint="@string/result"
            android:paddingHorizontal="8dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <ImageButton
            android:id="@+id/calculate_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/calculate_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultat_tw" />
</androidx.constraintlayout.widget.ConstraintLayout>